--- a/style.css
+++ b/style.css
@@ -1,7 +1,9 @@
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@200;400;500&display=swap');
 * {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+  font-family: 'Inter', sans-serif;
 }
 @font-face {
   font-family: Millik Regular;
@@ -25,10 +27,6 @@ h5 {
 }
 p {
   font-family: Georgia;
-}
-.name {
-  font-family: Millik Regular;
-  /* line-height: 50px; */
 }
 .project-img img {
   transform: scale(1);
